--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Zeidan Jiddou">
     <link rel="shortcut icon" type="image/x-icon" href="https://Zeidan43.github.ioimg/favicon.ico">
-    <title>Zeidan Jiddou</title>
+    <title>Resume | Zeidan Jiddou</title>
     <meta name="description" content="I&rsquo;m Zeidan Jiddou, I study Applied Statistics and Data Scientist at Polytechnique of Nouakchott.
 Have a look at some of my working projects.
 For more check out my academic &amp; professional resume.
@@ -56,11 +56,13 @@ Contact me at [21016@esp.mr].">
 
 
   <div class="container">
-    <h3 class="mt-3"><b><a href="https://Zeidan43.github.io/resume/"></a></b></h3>
+    <h3 class="mt-3"><b><a href="https://Zeidan43.github.io/resume/">Resume</a></b></h3>
     <div class="blog-title my-4">
       <h6>
-        January 1, 0001
+        May 30, 2023
         &nbsp;&nbsp;
+        
+          <span class="badge bg-success">Resume</span>
         
       </h6>
     </div>
